# prospero

./: .gitignore  Cargo.toml  README.md  benchmark.rs  options.rs  prospero.rs
common/: affine.rs  mod.rs  sample_plane.rs  sample_sdf.rs
shaders/: affine.wgsl  sample_plane.wgsl  sample_sdf.wgsl
shaders/sdf/: alien.wgsl  arlo.wgsl  cheese.wgsl  sphere.wgsl
